force-app/main/default/objects/VoiceCall/fields/GenAI_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Call_Outcome__c</fullName>
    <label>GenAI Call Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>