force-app/main/default/objects/VoiceCall/fields/GenAI_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Call_Summary__c</fullName>
    <label>GenAI Call Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>