force-app/main/default/objects/VoiceCall/fields/GenAI_Complete_Raw_Analysis__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Complete_Raw_Analysis__c</fullName>
    <label>GenAI Complete Raw Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>