force-app/main/default/objects/VoiceCall/fields/GenAI_Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Customer_Sentiment__c</fullName>
    <label>GenAI Customer Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>