force-app/main/default/objects/VoiceCall/fields/GenAI_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Next_Steps__c</fullName>
    <label>GenAI Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>