force-app/main/default/objects/VoiceCall/fields/GenAI_Rep_Effectiveness_Justification__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Rep_Effectiveness_Justification__c</fullName>
    <label>GenAI Rep Effectiveness Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>