force-app/main/default/objects/VoiceCall/fields/GenAI_Rep_Effectiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Rep_Effectiveness_Score__c</fullName>
    <label>GenAI Rep Effectiveness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>