force-app/main/default/objects/VoiceCall/fields/GenAI_Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Topics_Discussed__c</fullName>
    <label>GenAI Topics Discussed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>